@@ -1,9 +1,10 @@
 package com.hub;
 
-import org.springframework.http.ResponseEntity;
+import org.springframework.scheduling.annotation.EnableScheduling;
+import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.web.bind.annotation.*;
 
-import java.io.OutputStream;
+import java.io.*;
 
 import com.google.gson.Gson;
 import com.google.gson.JsonObject;
@@ -11,20 +12,28 @@ import com.google.gson.JsonParser;
 
 import javax.annotation.PostConstruct;
 import java.net.HttpURLConnection;
-import java.net.MalformedURLException;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
+import java.time.Duration;
 import java.util.List;
 
+
 @RestController
+@EnableScheduling
 public class HubController {
 
     private final ServerHub hub;
     private final HubRepository repository;
+    private String leader;
 
-    public HubController(HubRepository repository){
+    public HubController(HubRepository repository) throws IOException {
         this.repository = repository;
         this.hub = new ServerHub();
+        leader = findAndSendLeader();
     }
 
     @PostConstruct
@@ -35,28 +44,105 @@ public class HubController {
         }
     }
 
+    protected String findAndSendLeader() throws IOException {
+        leader = null;
+        for(Long id: hub.getMap().keySet()) {
+            try {
+                HttpRequest request = HttpRequest.newBuilder()
+                        .uri(new URI(this.hub.getAddress(id) + "/ping"))
+                        .headers("Content-Type", "application/json;charset=UTF-8")
+                        .GET()
+                        .build();
+                HttpResponse<String> response = HttpClient.newBuilder()
+                        .build()
+                        .send(request, HttpResponse.BodyHandlers.ofString());
+                if(response.body().equals("true")){
+                    leader = String.valueOf(id);
+                    sendLeader();
+                    return leader;
+                }
+            }
+            catch(Exception ignored) {
+            }
+        }
+        return null;
+    }
+
     @PostMapping("/hub")
     protected Long addServer(@RequestBody String json) throws Exception {
         String address = parseAddressFromJsonString(json);
-
         HubEntry server = new HubEntry();
         server.setServerAddress(address);
         repository.save(server);
         address = address + server.getId();
         server.setServerAddress(address);
         repository.save(server);
-
         Long serverId = server.getId();
         String newServerInfo = storeServerInfoInString(serverId, address);
         this.hub.addServer(serverId, address);
         addNewServerToAllServers(newServerInfo);
+        if(leader == null)
+        {
+            leader = String.valueOf(serverId);
+        }
+        sendLeader();
         return serverId;
+    }
+
+    private void sendLeader() throws IOException {
+        for(String address : hub.getMap().values())
+        {
+            URL url = new URL(address + "/leader");
+            HttpURLConnection con = (HttpURLConnection) url.openConnection();
+            con.setRequestMethod("PUT");
+            con.setRequestProperty("Content-Type", "application/json");
+            con.setDoOutput(true);
+            try(OutputStream os = con.getOutputStream()) {
+                byte[] input = leader.getBytes(StandardCharsets.UTF_8);
+                os.write(input, 0, input.length);
+            }
+            int y = con.getResponseCode();
+            con.disconnect();
+        }
+    }
+
+    @Scheduled(fixedDelay = 60000)
+    protected void randomlyCheck() throws Exception {
+        if(this.leader != null){
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(new URI(this.hub.getAddress(Long.parseLong(leader)) + "/ping"))
+                    .headers("Content-Type", "application/json;charset=UTF-8")
+                    .timeout(Duration.ofMillis(300))
+                    .GET()
+                    .build();
+            HttpResponse<String> response = null;
+            try{
+                response = HttpClient.newBuilder()
+                        .build()
+                        .send(request, HttpResponse.BodyHandlers.ofString());
+            }catch(Exception e){
+                findAndSendLeader();
+            }
+            if(!response.body().equals("true")){
+                findAndSendLeader();
+            }
+        }else{
+            findAndSendLeader();
+        }
     }
 
     @GetMapping("/hub")
     protected String getMap() {
         Gson gson = new Gson();
         return gson.toJson(this.hub.getMap());
+    }
+
+    @GetMapping("/hub/leader")
+    protected String getLeader(@RequestHeader(name = "referer") String address, @RequestHeader(name = "id") String id) throws IOException {
+        if(leader == null && !id.equals("null")){
+            leader = id;
+        }
+        return leader;
     }
 
     private String parseAddressFromJsonString(String json) {
@@ -76,17 +162,14 @@ public class HubController {
     private void addNewServerToAllServers(String serverInfo) throws Exception {
         for (Long id : this.hub.getMap().keySet()) {
             //Send the newly created server to the pre-existing servers
-            URL url = new URL(this.hub.getAddress(id));
-            HttpURLConnection con = (HttpURLConnection) url.openConnection();
-            con.setRequestMethod("POST");
-            con.setRequestProperty("Content-Type", "application/json");
-            con.setDoOutput(true);
-            try(OutputStream os = con.getOutputStream()) {
-                byte[] input = serverInfo.getBytes(StandardCharsets.UTF_8);
-                os.write(input, 0, input.length);
-            }
-            int y = con.getResponseCode();
-            con.disconnect();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(new URI(this.hub.getAddress(id)))
+                    .headers("Content-Type", "application/json;charset=UTF-8")
+                    .POST(HttpRequest.BodyPublishers.ofString(serverInfo))
+                    .build();
+            HttpClient.newBuilder()
+                    .build()
+                    .send(request, HttpResponse.BodyHandlers.ofString());
         }
     }
 
@@ -97,6 +180,9 @@ public class HubController {
         Long id = jsonObject.get("id").getAsLong();
         String address = jsonObject.get("address").getAsString();
         this.hub.addServer(id, address);
+        HubEntry entry = repository.getById(id);
+        entry.setServerAddress(address);
+        repository.save(entry);
         addNewServerToAllServers(json);
     }
 
@@ -105,24 +191,17 @@ public class HubController {
         if(!this.hub.removeServer(serverID)) return;
         repository.deleteById(serverID);
         for (Long id : this.hub.getMap().keySet()) {
-            URL url = new URL(this.hub.getAddress(id));
-            url = new URL("http://" + url.getHost() + "/bookstores/map");
-            HttpURLConnection con = (HttpURLConnection) url.openConnection();
-            con.setRequestMethod("DELETE");
-            con.setRequestProperty("Content-Type", "application/json");
-            con.setDoOutput(true);
-            Gson gson = new Gson();
-            JsonObject json = new JsonObject();
-            json.addProperty("id", serverID);
-            String str = gson.toJson(json);
-            try(OutputStream os = con.getOutputStream()) {
-                byte[] input =str.getBytes(StandardCharsets.UTF_8);
-                os.write(input, 0, input.length);
-            }
-            int y = con.getResponseCode();
-            System.out.println(y);
-            con.disconnect();
+            HttpRequest request = HttpRequest.newBuilder()
+                    .uri(new URI(this.hub.getAddress(id)))
+                    .headers("Content-Type", "application/json;charset=UTF-8")
+                    .DELETE()
+                    .build();
+            HttpClient.newBuilder()
+                    .build()
+                    .send(request, HttpResponse.BodyHandlers.ofString());
+        }
+        if(serverID.equals(Long.parseLong(leader))){
+            findAndSendLeader();
         }
     }
-
 }
